--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -139,6 +139,8 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     margin-bottom: 10px;
 }
 .news_top_content{
+    word-break: break-all;
+    text-align: justify;
     width: 100%;
     border-top: 1px solid #eee;
     padding-top: 28px;
@@ -181,6 +183,8 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
 }
 /* 2021.6.2新增 */
 .news_top_content *{
+    word-break: break-all;
+    text-align: justify;
     font-size: 18px !important;
     color: #333!important;
     margin-bottom: 20px;
