--- a/V1/css/newevents.css
+++ b/V1/css/newevents.css
@@ -402,6 +402,7 @@
     padding-top: 30px;
 }
 .top_thre{
+    display: flex;
     width: 300px;
     height: 126px;
     background-image: url("../images/top_thre_bg.png");
@@ -754,8 +755,15 @@
     .prizePool .title{
         margin-bottom: .1rem;
     }
-    .other{
+    .other {
         margin-bottom: .14rem;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0 .2rem;
+    }
+    .other_mr {
+        margin-right: 0;
     }
     .others_div span{
         font-size: .2rem;
