--- a/V1/css/playerdetail.css
+++ b/V1/css/playerdetail.css
@@ -129,7 +129,7 @@
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
     border-radius: 8px;
-    padding: 20px 20px 0  20px;
+    padding: 20px;
 }
 .circle_top{
     display: inline-block;
