--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -121,6 +121,7 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     margin-bottom: 18px;
 }
 .news_label{
+    padding-top: 30px;
     width: 700px;
     margin-bottom: 10px;
 }
@@ -221,4 +222,34 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
 		font-weight: 400;
 		color: #333;
 	}
+    .news_top_content * {
+        word-break: break-all;
+        text-align: justify;
+        font-size: .24rem!important;
+        color: #333!important;
+        margin-bottom: .2rem;
+        text-indent: 2em;
+        font-family: shuzi1!important;
+    }
+    .news_time {
+        font-size: .22rem;
+        color: #999;
+        height: .22rem;
+        line-height: .22rem;
+        margin-bottom: .22rem;
+    }
+    .news_label span {
+        float: left;
+        font-size: .22rem;
+        color: #FF6649;
+        font-weight: 400;
+        line-height: .38rem;
+        height: .4rem;
+        background: #FFFFFF;
+        border: .01rem solid #FF6649;
+        border-radius: .2rem;
+        padding: 0 .2rem;
+        margin-right: .16rem;
+        margin-bottom: .2rem;
+    }
 }
