--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -199,6 +199,7 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
 @media only screen and (max-width: 1024px){
     .game_left{
         width: 100%;
+        margin-bottom: 20px;
     }
     .have_img{
         width: 5rem;
@@ -252,4 +253,40 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
         margin-right: .16rem;
         margin-bottom: .2rem;
     }
+    /* 2021.6.8新增 */
+    .team_pbu_name{
+        font-size: .3rem;
+        line-height: .3rem;
+        height: .3rem;
+    }
+    .news_title {
+        width: 5rem;
+        font-size: .24rem;
+        height: .28rem;
+        line-height: .28rem;
+    }
+    .news_explain_content {
+        width: 100%;
+        height: .56rem;
+        display: -webkit-box;
+        word-break: break-all;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: .2rem;
+        color: #666;
+        line-height: .28rem;
+    }
+    .news_item li {
+        height: 1.3rem;
+        border-bottom: .01rem solid #eee;
+        padding: .2rem 0;
+    }
+    .news_img {
+        width: 1.1rem;
+        height: .8rem;
+        display: inline-block;
+    }
+    /* 2021.6.8新增 */
 }
