--- a/V1/css/teamdetail.css
+++ b/V1/css/teamdetail.css
@@ -417,7 +417,7 @@ li a .max_span span{
 }
 .team_results{
     width:100%;
-    height: 326px;
+    /*height: 326px;*/
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
     border-radius: 8px;
