--- a/V1/css/teamdetail.css
+++ b/V1/css/teamdetail.css
@@ -357,6 +357,9 @@
     display: flex;
     align-items: center;
 }
+.w25.w25wap{
+    justify-content: flex-end;
+}
 .honor_bottom_img1{
     width: 24px;
     height: 20px;
