--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -923,7 +923,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 }
 .property-img {
     margin: 0 auto;
-    background: url() no-repeat center;
+    /*background: url() no-repeat center;*/
     background-size: cover;
 }
 .table-wrap .table .property-img {
@@ -1367,4 +1367,19 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
         line-height: 60px;
         font-size: 24px;
     }
+      .game_detail_line1{
+          width: .5rem;
+      }
+      .game_detail_item1 .right .imgheight30{
+          width: auto;
+          height: auto;
+      }
+      .game_detail_item1 .right .imgheight3 .imgauto{
+          width: 30px;
+          height: 30px;
+          object-fit: contain;
+      }
+      .vs_data1{
+          width: 100%;
+      }
   }
