--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -259,6 +259,9 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
         line-height: .3rem;
         height: .3rem;
     }
+    .news_label{
+        width: 100%;
+    }
     .news_title {
         width: 5rem;
         font-size: .24rem;
