--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -40,7 +40,8 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     display: inline-block;
 }
 .imgauto{
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 100%;
 }
@@ -52,9 +53,10 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     font-weight: 500;
     margin-bottom: 12px;
     overflow:hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
     white-space: nowrap;
-    width: 500px;
+    /* width: 500px; */
 }
 .news_detail_item{
     display: none;
@@ -81,7 +83,8 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     -webkit-box-orient: vertical;
     -webkit-line-clamp:2;/*5代表, 在第5行结尾出现省略号,后面的内容都不显示*/
     overflow: hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
 }
 .news_item li{
     height: 114px;
@@ -102,15 +105,11 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     padding: 20px;
 }
 .news_top .title{
-    font-size: 30px;
+    font-size: 26px;
     color: #333;
     font-weight: 500;
-    height: 30px;
     line-height: 30px;
-    width: 600px;
-    overflow:hidden;
-    text-overflow:ellipsis;
-    white-space: nowrap;
+    width: 100%;
     margin-bottom: 16px;
 }
 .news_time{
@@ -160,7 +159,8 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
 	width:820px;
 }
 .news_top_content img{
-	object-fit:cover;
+	-o-object-fit:cover;
+	   object-fit:cover;
 	width:100%;
 	height:100%;
 	display:block;
@@ -220,5 +220,58 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
 		line-height: .36rem;
 		font-weight: 400;
 		color: #333;
+	}
+
+    /* 2021.6.8新增 */
+    .team_pbu_name{
+        font-size: .3rem;
+        line-height: .3rem;
+        height: .3rem;
+    }
+    .news_title {
+        width: 5rem;
+        font-size: .24rem;
+        height: .28rem;
+        line-height: .28rem;
+    }
+    .news_explain_content {
+        width: 100%;
+        height: .56rem;
+        display: -webkit-box;
+        word-break: break-all;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+        -o-text-overflow: ellipsis;
+           text-overflow: ellipsis;
+        font-size: .2rem;
+        color: #333;
+        line-height: .28rem;
+    }
+    .news_item li {
+        height: 1.3rem;
+        border-bottom: .01rem solid #eee;
+        padding: .2rem 0;
+    }
+    .news_img {
+        width: 1.1rem;
+        height: .8rem;
+        display: inline-block;
+    }
+    .news_label{
+        width: 100%;
+    }
+    /* 2021.6.8新增 */
+
+    .news_content{
+		display: flex;
+		justify-content: space-between;
+		flex-shrink: 0;
+	}
+	.have_img{
+		width:auto;
+	}
+	.news_img{
+		flex-shrink: 0;
 	}
 }
