--- a/V1/css/headerfooter.css
+++ b/V1/css/headerfooter.css
@@ -3,12 +3,20 @@
     height: 88px;
 }
 .nav ul{
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
     /* justify-content: space-between; */
-    align-items: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     /* justify-content: space-between; */
     height: 88px;
-    flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     max-width: 970px;
 }
 .nav li{
@@ -18,15 +26,27 @@
     /* line-height: 88px; */
     word-wrap: break-word;
     word-break: normal;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 0 24px;
-    align-items: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
    
 }
 .nav li a{
     color: #666;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .nav li.active{
     font-size: 24px;
@@ -72,6 +92,7 @@ margin: 0 auto;
     margin: 8px auto;
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     display: none;
   }
@@ -82,14 +103,17 @@ margin: 0 auto;
 #hamburger-6.is-active{
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     -webkit-transition-delay: 0.6s;
     -o-transition-delay: 0.6s;
-    transition-delay: 0.6s;
+    -moz-transition-delay: 0.6s;
+         transition-delay: 0.6s;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     -o-transform: rotate(45deg);
-    transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+         transform: rotate(45deg);
   }
   
   #hamburger-6.is-active .line:nth-child(2){
@@ -100,21 +124,24 @@ margin: 0 auto;
   #hamburger-6.is-active .line:nth-child(3){
     -webkit-transition-delay: 0.3s;
     -o-transition-delay: 0.3s;
-    transition-delay: 0.3s;
+    -moz-transition-delay: 0.3s;
+         transition-delay: 0.3s;
   }
   
   #hamburger-6.is-active .line:nth-child(1){
     -webkit-transform: translateY(13px);
     -ms-transform: translateY(13px);
     -o-transform: translateY(13px);
-    transform: translateY(13px);
+    -moz-transform: translateY(13px);
+         transform: translateY(13px);
   }
   
   #hamburger-6.is-active .line:nth-child(3){
     -webkit-transform: translateY(-13px) rotate(90deg);
     -ms-transform: translateY(-13px) rotate(90deg);
     -o-transform: translateY(-13px) rotate(90deg);
-    transform: translateY(-13px) rotate(90deg);
+    -moz-transform: translateY(-13px) rotate(90deg);
+         transform: translateY(-13px) rotate(90deg);
   }
   .foot{
     width: 100%;
@@ -169,8 +196,14 @@ width: 12.5%;
         height: .47rem;
     }
     .nav ul{
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
         /* flex-direction: column; */
+        -webkit-transition: all 3s;
+        -o-transition: all 3s;
+        -moz-transition: all 3s;
         transition: all 3s;
         font-size: 22px;
     }
