--- a/V1/css/index.css
+++ b/V1/css/index.css
@@ -7,7 +7,7 @@
 }
   .banner{
       width: 100%;
-      /* height: 488px; */
+      /* max-height: 488px; */
       position: relative;
       padding-top: 19%;
   }
