--- a/V1/css/reset.css
+++ b/V1/css/reset.css
@@ -90,7 +90,8 @@ a {
     visibility: hidden;
 }
 *{
-    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
     text-shadow: none;
     margin: 0;
     padding: 0;
@@ -110,7 +111,8 @@ a:focus{text-decoration: none}
 } */
 
 .imgauto{
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 100%;
 }
@@ -129,8 +131,13 @@ a:focus{text-decoration: none}
 /* 热门赛事 */
   .game_match_ul{
     min-height: 304px;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
 }
 .bg1{
   background: url("../images/bg_1.png") no-repeat right bottom;
@@ -140,6 +147,9 @@ a:focus{text-decoration: none}
   margin-bottom: 46px;
   border-bottom: 6px solid ;
   border-color: rgba(0,0,0,0);
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
   transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
@@ -148,7 +158,11 @@ a:focus{text-decoration: none}
     box-shadow: 0px 16px 40px 0px rgba(51, 51, 51, 0.14);
     border-radius: 4px;
     border-bottom: 6px solid #ff6649;
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+       -moz-transform: translateY(0px);
+        -ms-transform: translateY(0px);
+         -o-transform: translateY(0px);
+            transform: translateY(0px);
 }
 .game_match_ul li:hover a{
     display: block;
@@ -158,24 +172,43 @@ a:focus{text-decoration: none}
     background-position: center center;
 }
 .game_match_ul li:hover{
-    justify-content: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .game_match_top{
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-justify-content: space-between;
+       -moz-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding-top: 10px;
 }
 .game_match_bottom {
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-justify-content: space-between;
+       -moz-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .game_match_img{
     width: 54px;
     height: 54px;
 }
 .game_match_img img{
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 100%;
 }
@@ -186,23 +219,35 @@ a:focus{text-decoration: none}
     word-break: normal;
     max-width: 45%;
     overflow:hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
     white-space: nowrap
   /*  */
 }
 .game_match_bottom .left{
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
   float: left;
   font-size: 14px;
   font-weight: 900;
-  flex-direction: column;
-  align-items: center;
+  -webkit-flex-direction: column;
+     -moz-box-orient: vertical;
+     -moz-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 15px;
 }
 .game_match_bottom .ov_1 span{
     max-width: 98px;
     overflow:hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
     white-space: nowrap;
 }
 .game_match_bottom .center{
@@ -212,8 +257,13 @@ a:focus{text-decoration: none}
 
 /* 热门战队 */
 .game_team_list_detail{
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
 	/* justify-content: space-around; */
 }
 .game_team_list_detail .a1{
@@ -221,16 +271,23 @@ a:focus{text-decoration: none}
     height: 114px;
 }
 .game_team_list_detail .a1 img{
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 100%;
 }
 .game_team_list_detail li{
     width: 128px;
     height: 182px;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
     margin-right: 36px;
     border-radius: 8px;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
     transition: all 0.2s linear;
     margin-bottom: 10px;
     padding: 2px;
@@ -253,19 +310,31 @@ a:focus{text-decoration: none}
     display: block;
     color:#333;
 	overflow:hidden;
-	text-overflow:ellipsis;
+	-o-text-overflow:ellipsis;
+	   text-overflow:ellipsis;
 	white-space: nowrap
 } 
 .game_team_list_detail li:hover span{
+    background: -webkit-linear-gradient(left, #FAC569, #FF6551);
+    background: -moz-linear-gradient(left, #FAC569, #FF6551);
+    background: -o-linear-gradient(left, #FAC569, #FF6551);
     background: linear-gradient(90deg, #FAC569, #FF6551);
     color: #fff;
     line-height: 48px;
 }
 
 .game_team_list_detail li:hover{
-    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+    background: -webkit-linear-gradient(left, #FAC569, #FF6551);
+    background: -moz-linear-gradient(left, #FAC569, #FF6551);
+    background: -o-linear-gradient(left, #FAC569, #FF6551);
     background: linear-gradient(90deg, #FAC569, #FF6551);
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+       -moz-transform: translateY(0px);
+        -ms-transform: translateY(0px);
+         -o-transform: translateY(0px);
+            transform: translateY(0px);
 
 }
 .game_team_list_detail li:hover a{
@@ -276,17 +345,40 @@ a:focus{text-decoration: none}
     font-size: 24px;
     font-weight: 500;
     color: #FE7A00;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    -webkit-flex-direction: column;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-justify-content: space-between;
+       -moz-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 /* 热门战队 */
 /* null */
 .null{
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-flex-direction: column;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     align-items: center;
     padding: 30px;
 }
@@ -299,8 +391,14 @@ a:focus{text-decoration: none}
 }
 /* 分页 */
 .paging{
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .paging_pre img{
     width: 34px;
@@ -321,7 +419,11 @@ a:focus{text-decoration: none}
     display: block;
 }
 .img_transform{
-    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+       -moz-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+         -o-transform: rotate(180deg);
+            transform: rotate(180deg);
 }
 .paging a{
     float: left;
@@ -367,7 +469,11 @@ color: #fff;
     clear: both;
     width: 14px;
     height: 14px;
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+       -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+         -o-transform: rotate(45deg);
+            transform: rotate(45deg);
     position: absolute;
     left: 0;
     right: 0;
@@ -379,9 +485,18 @@ color: #fff;
 .qrcode_img{
     width: 100px;
     height: 100px;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
     left: 0;
     top: 8px;
@@ -426,7 +541,8 @@ color: #fff;
     color: #333;
     width: 150px;
     overflow:hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
     white-space: nowrap
 }
 .game3_team1_bottom{
@@ -526,7 +642,8 @@ color: #fff;
     background: url("../images/game3_vs.png");
     background-position:center top;
     background-repeat: no-repeat;
-    background-size: 100%;
+    -o-background-size: 100%;
+       background-size: 100%;
     position: absolute;
     z-index: 1;
     left: 50%;
@@ -583,7 +700,11 @@ color: #fff;
     position: absolute;
     right: -1px;
     top: -1px;
-    transform: rotate(10deg);
+    -webkit-transform: rotate(10deg);
+       -moz-transform: rotate(10deg);
+        -ms-transform: rotate(10deg);
+         -o-transform: rotate(10deg);
+            transform: rotate(10deg);
 }
 .game3_team2_vs_bot .compare-bar .r-bar {
     height: 100%;
@@ -609,7 +730,8 @@ color: #fff;
     left: 50%;
     margin-left: -65px;
     overflow:hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
     white-space: nowrap
 }
 .frequency_center.grey{
@@ -630,6 +752,7 @@ color: #fff;
     border: 1px solid #EEEEEE;
     border-radius: 8px;
     padding: 20px 20px 0 18px;
+    border-bottom: 0;
 }
 .team_news_mid{
     margin-bottom: 10px;
@@ -643,7 +766,8 @@ color: #fff;
     font-size: 24px;
     color: #333;
     overflow:hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
     white-space: nowrap;
     font-weight: 500;
 }
@@ -666,7 +790,8 @@ color: #fff;
     display: block;
     width: 100%;
     overflow:hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
     white-space: nowrap;
     font-size: 20px;
     color: #666;
@@ -724,7 +849,8 @@ color: #fff;
     width: 100%;
     padding: 0 10px;
     overflow:hidden;
-    text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+       text-overflow:ellipsis;
     white-space: nowrap;
     background-color: rgba(0,0,0,.5);
     position: absolute;
@@ -744,8 +870,8 @@ color: #fff;
 .team_pbu_name{
     font-size: 20px;
     color: #333;
-    height: 20px;
-    line-height: 20px;
+    height: 24px;
+    line-height: 24px;
 }
 .team_pub_more span{
     font-size: 20px;
@@ -832,15 +958,26 @@ color: #fff;
         margin-bottom: .3rem;
     }
     .team_news_img{
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        -webkit-flex-direction: column;
+           -moz-box-orient: vertical;
+           -moz-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     .team_news_img p{
         width: 100%;
         padding: 0 5%;
         overflow:hidden;
-        text-overflow:ellipsis;
+        -o-text-overflow:ellipsis;
+           text-overflow:ellipsis;
         white-space: nowrap;
     }
     /* 分页移动 */
@@ -858,7 +995,10 @@ color: #fff;
         width: .3rem;
     }
     .paging{
-        align-items: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     /* 分页移动 */
 	
@@ -883,3 +1023,36 @@ color: #fff;
 		height:.3rem;
 	}
 }
+
+/* 面包屑导航 */
+    .navigation{
+        padding: 0 0 20px;
+        font-size: 16px;
+        color: #666;
+    }
+    .navigation a{
+        font-size: 16px;
+        color: #666;
+    }
+    .navigation span{
+        font-size: 16px;
+        color: #666;
+    }
+    .navigation a:hover{
+        color: #666;
+    }
+/* 移动 */
+@media only screen and (max-width: 1024px){
+    .navigation a{
+        font-size: .24rem;
+        color: #666;
+    }
+    .navigation span{
+        font-size: .24rem;
+        color: #666;
+    }
+    .suspension{
+        display: none;
+    }
+}
+/* 面包屑导航 */
