--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -190,6 +190,7 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     color: #333!important;
     margin-bottom: 20px;
     text-indent: 2em;
+    font-family: shuzi1!important;
 }
 .news_top_content p br{
     display: none;
