修改了首页tab点击切换带##的问题

--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -186,7 +186,7 @@
     float: left;
     margin-bottom: 10px;
 }
-.game_detail_ul li a{
+.game_detail_ul li{
     display: flex;
     align-items:center;
 }
