--- a/V1/css/index.css
+++ b/V1/css/index.css
@@ -7,7 +7,7 @@
 }
   .banner{
       width: 100%;
-      /* max-height: 488px; */
+      height: 488px;
       position: relative;
       padding-top: 19%;
   }
@@ -27,6 +27,7 @@
     z-index: 312;
     position: absolute;
     left: 50%;
+    bottom: 70px;
   }
   .download{
       width: 296px;
