修复了电竞选手详情页头部描述字体大小

--- a/V1/css/playerdetail.css
+++ b/V1/css/playerdetail.css
@@ -89,6 +89,17 @@
     text-overflow:ellipsis;
     white-space: nowrap;
 }
+.team_explain_bottom {
+    font-size: 18px;
+    color: #333;
+    line-height: 24px;
+    padding-bottom: 16px;
+}
+.team_explain_bottom *{
+    font-size: 18px;
+    color: #333;
+    line-height: 24px;
+}
 .team_explain_bottom p{
     font-size: 18px;
     color: #333;
