--- a/V1/css/index.css
+++ b/V1/css/index.css
@@ -56,7 +56,7 @@
   }
   /* 赛事 */
   .game_match{
-      padding-top: 48px;
+      padding-top: 30px;
       margin-bottom: 40px;
   }
   .game_title_e{
@@ -66,6 +66,8 @@
       font-size: 26px;
       color: #333;
       font-weight: 500;
+      height: 26px;
+    line-height: 26px;
   }
   .game_title .title{
       float: left;
@@ -77,6 +79,9 @@
       font-size: 20px;
       color: #666;
       margin-right: 15px;
+      height: 20px;
+    line-height: 20px;
+    vertical-align: middle;
   }
   .game_title .more a  img{
       width: 10px;
