--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -169,7 +169,7 @@
     padding-top: 10px;
     border-bottom: 1px solid #fff;
 }
-.game_detail_ul{
+.game_detail_ul,.live_box_ul{
     display: flex;
     justify-content: space-between;
     /* width: 444px; */
@@ -178,7 +178,7 @@
     flex-wrap: wrap;
 
 }
-.game_detail_ul li{
+.game_detail_ul li,.live_box_ul li{
     display: flex;
     width: 140px;
     height: 38px;
@@ -186,7 +186,7 @@
     float: left;
     margin-bottom: 10px;
 }
-.game_detail_ul li{
+.game_detail_ul li,.live_box_ul li{
     display: flex;
     align-items:center;
 }
@@ -201,29 +201,29 @@
     width: 100%;
     height: 100%;
 }
-.game_detail_ul span{
+.game_detail_ul span,.live_box_ul span{
     font-size: 20px;
     color: #999;
 }
-.game_detail_ul li.active1{
+.game_detail_ul li.active1,.live_box_ul li.active1{
     width: 104px;
     height: 38px;
     margin: 0 10px;
 }
-.game_detail_ul li.active1 .game_detail_img1 {
+.game_detail_ul li.active1 .game_detail_img1,.live_box_ul li.active1 .game_detail_img1{
     width: 26px;
     height: 26px;
     margin: 0 10px;
     font-size: 0;
 }
-.game_detail_ul li.active1 a span{
+.game_detail_ul li.active1 a span,.live_box_ul li.active1 a span{
     font-size: 12px;
 }
-.game_detail_ul li.active{
+.game_detail_ul li.active,.live_box_ul li.active{
     border: 1px solid #FA8E69;
     border-radius: 19px;
 }
-.game_detail_ul li.active a span{
+.game_detail_ul li.active a span,.live_box_ul li.active a span{
     color: #FF6649;
 }
 .game_detail_div{
