--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -160,12 +160,12 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
 	width:820px;
 }
 .news_top_content img{
-	-o-object-fit:cover;
-	   object-fit:cover;
-	width:100%;
-	height:100%;
+	/* -o-object-fit:cover;
+	   object-fit:cover; */
+	max-width:100%;
+	height:auto;
 	display:block;
-	margin:20px 0;
+	margin:20px auto;
 }
 .team_pub_top{
     margin-bottom: 10px;
