增加了dota2样式

--- a/V1/css/dota2.css
+++ b/V1/css/dota2.css
@@ -755,6 +755,19 @@
     display: block;
 }
 /* 2021.6.17dota2新增 */
+/* 2021.6.21新增 */
+.liveBox_img img{
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
+.live_box_detail .game_detail_item1 .left{
+    width: 170px;
+    justify-content: flex-start;
+}
+.live_box_detail .game_detail_item1 .left.right{
+    justify-content: flex-end;
+}
 /* 移动 */
 @media only screen and (max-width: 1024px){
     .dota2_div{
