--- a/V1/css/dota2.css
+++ b/V1/css/dota2.css
@@ -23,14 +23,14 @@
     line-height: 38px;
     float: left;
 }
-.dota2_ul1 li a{
+.dota2_ul1 li{
     font-size: 20px;
     color: #FF6649;
 }
 .dota2_ul1 li.active{
     background: #FF6649;
 }
-.dota2_ul1 li.active a{
+.dota2_ul1 li.active {
     color: #fff;
 }
 .dota2_div{
@@ -767,6 +767,12 @@
 }
 .live_box_detail .game_detail_item1 .left.right{
     justify-content: flex-end;
+}
+.live_box_detail .game_detail_item1 .left .imgwidth40{
+    flex-shrink: 0;
+}
+.live_box_detail .game_detail_item1 .imgwidth40 .imgauto{
+    object-fit: cover;
 }
 /* 移动 */
 @media only screen and (max-width: 1024px){
