比赛样式调整

--- a/V1/css/dota2.css
+++ b/V1/css/dota2.css
@@ -721,7 +721,7 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
-.vs_data2 li a {
+.vs_data2 li {
     font-size: 18px;
     color: #666;
 }
