--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -165,6 +165,7 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     font-size: 18px !important;
     color: #333!important;
     font-family: shuzi1!important;
+    line-height: 28px;
 }
 .news_top_content img{
 	/* -o-object-fit:cover;
@@ -198,6 +199,7 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     margin-bottom: 20px;
     text-indent: 2em;
     font-family: shuzi1!important;
+    line-height: 28px;
 }
 .news_top_content p br{
     display: none;
