比赛详情战队增加链接以及css修改

--- a/V1/css/dota2.css
+++ b/V1/css/dota2.css
@@ -772,7 +772,12 @@
     flex-shrink: 0;
 }
 .live_box_detail .game_detail_item1 .imgwidth40 .imgauto{
-    object-fit: cover;
+    object-fit: contain;
+}
+.game_detail_img1 img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 /* 移动 */
 @media only screen and (max-width: 1024px){
