--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -36,10 +36,10 @@
     height: 128px;
     margin: 0 auto;
 }
-/* .game_team1_img img{
+.game_team1_img img{
     display: block;
     margin: 0 auto;
-} */
+} 
 .game_team1 span{
     font-size: 24px;
     color: #333;
